draft__all-pages

--- a/app/pug/blocks/head.pug
+++ b/app/pug/blocks/head.pug
@@ -12,5 +12,6 @@ head
 	link(rel="shortcut icon", href="favicon.ico", type="image/x-icon")
 	//- fonts
 	//- stylesheet
+	link(rel="stylesheet", href="js/swiper/swiper-bundle.min.css")
 	link(rel="stylesheet", href="css/style.css")
 	
