--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -6,9 +6,8 @@ html
 		title
 	body
 		include blocks/header.pug
-		
 		main.page-container
-			include blocks/navigation-arrow.pug
+			include blocks/navigation-home.pug
 			section.main-slider 
 				.main-slider__text 
 					h1.main-title Мы мастера WEB-а
