--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -8,6 +8,7 @@ html
 		include blocks/header.pug
 		main.page-container
 			include blocks/navigation-home.pug
+			include blocks/arrow-home.pug
 			section.main-slider 
 				.main-slider__text 
 					h1.main-title Мы мастера WEB-а
