--- a/app/pug/blocks/head.pug
+++ b/app/pug/blocks/head.pug
@@ -13,5 +13,6 @@ head
 	//- fonts
 	//- stylesheet
 	link(rel="stylesheet", href="js/swiper/swiper-bundle.min.css")
+	link(rel="stylesheet", href="libs/Magnific-Popup-master/dist/magnific-popup.css")
 	link(rel="stylesheet", href="css/style.css")
 	
