--- a/app/pug/text-page.pug
+++ b/app/pug/text-page.pug
@@ -6,9 +6,9 @@ html
 		title
 	body
 		include blocks/header.pug
-		
 		main.page-container
-			include blocks/navigation-text-page.pug
+			include blocks/navigation-home.pug
+			include blocks/arrow-text-page.pug
 			section.text-page 
 				.container 
 					.text-page__text 
@@ -115,9 +115,7 @@ html
 					p.text В 2020 году был окончательно завершен 20-этажный жилой небоскреб в Сингапуре по проекту Heatherwick Studio, который был спроектирован как противовес распространенным стеклянным и стальным башням. Сделано это было умышленно, ведь именно Сингапур успел себя зарекомендовать тропическим мегаполисом, «городом-садом».
 					.text-page__testimodals 
 						.flex 
-							<svg width="60" height="46" viewBox="0 0 60 46" fill="none" xmlns="http://www.w3.org/2000/svg">
-								<path d="M42.8669 39.5915L28.7891 13.7069C27.3813 11.8784 26.8534 9.64995 27.2054 7.0215C27.5573 4.39304 28.9651 2.45027 31.4287 1.19318C36.5906 -1.43527 40.7552 0.278934 43.9227 6.33581L58.0005 32.049C61.2854 37.9916 60.5228 42.2199 55.7129 44.7341C50.4337 47.4769 46.1517 45.7627 42.8669 39.5915ZM15.7671 39.5915L1.68934 13.7069C0.281556 11.8784 -0.246361 9.64995 0.105583 7.0215C0.457529 4.39304 1.86531 2.45027 4.32892 1.19318C9.49079 -1.43527 13.6555 0.278934 16.823 6.33581L30.9008 32.049C34.1856 37.9916 33.423 42.2199 28.6131 44.7341C23.334 47.4769 19.052 45.7627 15.7671 39.5915Z" fill="#A755ED"/>
-							</svg>
+							<svg><use xlink:href="#testi"></use></svg>
 							.text-page__testimodals-text 
 								h3 Здание очень грамотно спроектировано, с учетом сложных климатических условий, где среднегодовая температура выше 35 градусов по Цельсию в тени. Именно поэтому здесь отлично реализована система затенения  и естественной вентиляции.
 								p LOUIS VITON
@@ -131,10 +129,7 @@ html
 						p Поделиться:
 						.flex 
 							a(href="#") 
-								<svg width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
-									<rect width="50" height="50" rx="15" fill="#0088CC"/>
-									<path d="M13.2106 22.6696L36.2684 14.1048C37.3386 13.7324 38.2733 14.3563 37.9265 15.9153L37.9285 15.9134L34.0025 33.7322C33.7115 34.9955 32.9323 35.3027 31.8422 34.7075L25.8635 30.4625L22.9798 33.1389C22.6609 33.4461 22.3919 33.7053 21.7741 33.7053L22.1986 27.8438L33.2791 18.2C33.7613 17.7911 33.1714 17.5607 32.5357 17.9677L18.8425 26.2733L12.9396 24.4993C11.6582 24.1076 11.6303 23.2648 13.2106 22.6696Z" fill="white"/>
-								</svg>
+								<svg width="50" height="50"><use xlink:href="#teg"></use></svg>
 							a(href="#")
 								<svg width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
 									<rect width="50" height="50" rx="15" fill="#C4C4C4"/>
@@ -143,24 +138,34 @@ html
 									<path d="M25.0001 32.0509C21.1123 32.0509 17.9492 28.8878 17.9492 25.0001C17.9492 21.1123 21.1123 17.9492 25.0001 17.9492C28.8878 17.9492 32.0509 21.1123 32.0509 25.0001C32.0509 28.8878 28.8878 32.0509 25.0001 32.0509ZM25.0001 20.1526C22.327 20.1526 20.1526 22.327 20.1526 25.0001C20.1526 27.6731 22.327 29.8475 25.0001 29.8475C27.6731 29.8475 29.8475 27.6731 29.8475 25.0001C29.8475 22.327 27.6731 20.1526 25.0001 20.1526Z" fill="white"/>
 									<path d="M33.0667 17.9416C33.0667 18.4984 32.6151 18.95 32.0583 18.95C31.5014 18.95 31.0498 18.4984 31.0498 17.9416C31.0498 17.3847 31.5014 16.9331 32.0583 16.9331C32.6151 16.9331 33.0667 17.3847 33.0667 17.9416Z" fill="white"/>
 									<defs>
-									<linearGradient id="paint0_linear_269_3021" x1="4.57703" y1="45.4233" x2="45.423" y2="4.57672" gradientUnits="userSpaceOnUse">
-									<stop stop-color="#FFC107"/>
-									<stop offset="0.507" stop-color="#F44336"/>
-									<stop offset="0.99" stop-color="#9C27B0"/>
-									</linearGradient>
+										<linearGradient id="paint0_linear_269_3021" x1="4.57703" y1="45.4233" x2="45.423" y2="4.57672" gradientUnits="userSpaceOnUse">
+										<stop stop-color="#FFC107"/>
+										<stop offset="0.507" stop-color="#F44336"/>
+										<stop offset="0.99" stop-color="#9C27B0"/>
+										</linearGradient>
 									</defs>
 								</svg>
 							a(href="#") 
-								<svg width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg">
-									<g clip-path="url(#clip0_269_3027)">
-									<rect y="-0.112305" width="50" height="50" rx="15" fill="#1877F2"/>
-									<path d="M30.4765 25.973H26.6206V40H20.7785V25.973H18V21.0434H20.7785V17.8534C20.7785 15.5721 21.8698 12 26.6726 12L31 12.018V16.803H27.8602C27.3451 16.803 26.621 17.0585 26.621 18.1467V21.048H30.9869L30.4765 25.973Z" fill="white"/>
-									</g>
-									<defs>
-									<clipPath id="clip0_269_3027">
-									<rect width="50" height="50" fill="white"/>
-									</clipPath>
-									</defs>
-								</svg>
+								<svg width="50" height="50"><use xlink:href="#facebock"></use></svg>
+								
+			svg(width="0" height="0" class="hidden")
+				<symbol width="60" height="46" viewBox="0 0 60 46" fill="none" xmlns="http://www.w3.org/2000/svg" id="testi">
+					<path d="M42.8669 39.5915L28.7891 13.7069C27.3813 11.8784 26.8534 9.64995 27.2054 7.0215C27.5573 4.39304 28.9651 2.45027 31.4287 1.19318C36.5906 -1.43527 40.7552 0.278934 43.9227 6.33581L58.0005 32.049C61.2854 37.9916 60.5228 42.2199 55.7129 44.7341C50.4337 47.4769 46.1517 45.7627 42.8669 39.5915ZM15.7671 39.5915L1.68934 13.7069C0.281556 11.8784 -0.246361 9.64995 0.105583 7.0215C0.457529 4.39304 1.86531 2.45027 4.32892 1.19318C9.49079 -1.43527 13.6555 0.278934 16.823 6.33581L30.9008 32.049C34.1856 37.9916 33.423 42.2199 28.6131 44.7341C23.334 47.4769 19.052 45.7627 15.7671 39.5915Z" fill="#A755ED"/>
+				</symbol>
+				<symbol width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg" id="teg">
+					<rect width="50" height="50" rx="15" fill="#0088CC"/>
+					<path d="M13.2106 22.6696L36.2684 14.1048C37.3386 13.7324 38.2733 14.3563 37.9265 15.9153L37.9285 15.9134L34.0025 33.7322C33.7115 34.9955 32.9323 35.3027 31.8422 34.7075L25.8635 30.4625L22.9798 33.1389C22.6609 33.4461 22.3919 33.7053 21.7741 33.7053L22.1986 27.8438L33.2791 18.2C33.7613 17.7911 33.1714 17.5607 32.5357 17.9677L18.8425 26.2733L12.9396 24.4993C11.6582 24.1076 11.6303 23.2648 13.2106 22.6696Z" fill="white"/>
+				</symbol>
+				<symbol width="50" height="50" viewBox="0 0 50 50" fill="none" xmlns="http://www.w3.org/2000/svg" id="facebock">
+					<g clip-path="url(#clip0_269_3027)">
+					<rect y="-0.112305" width="50" height="50" rx="15" fill="#1877F2"/>
+					<path d="M30.4765 25.973H26.6206V40H20.7785V25.973H18V21.0434H20.7785V17.8534C20.7785 15.5721 21.8698 12 26.6726 12L31 12.018V16.803H27.8602C27.3451 16.803 26.621 17.0585 26.621 18.1467V21.048H30.9869L30.4765 25.973Z" fill="white"/>
+					</g>
+					<defs>
+					<clipPath id="clip0_269_3027">
+					<rect width="50" height="50" fill="white"/>
+					</clipPath>
+					</defs>
+				</symbol>
 		include blocks/footer.pug
 		include blocks/scripts.pug
