--- a/app/sass/style.sass
+++ b/app/sass/style.sass
@@ -5,7 +5,7 @@
 // @import '''
 
 // blocks
-@import 'blocks/_text-container', 'blocks/_header', 'blocks/_menu', 'blocks/_footer', 'blocks/_fonts'
+@import 'blocks/_text-container', 'blocks/_header', 'blocks/_menu', 'blocks/_footer', 'blocks/_fonts', 'blocks/_responsive'
 
 
 // pages
