--- a/app/pug/blocks/arrow-text-page.pug
+++ b/app/pug/blocks/arrow-text-page.pug
@@ -1,4 +1,4 @@
-<svg width="1385" height="1601" viewBox="0 0 1385 1601" fill="none" xmlns="http://www.w3.org/2000/svg">
+<svg width="1385" height="1601" viewBox="0 0 1385 1601" fill="none" xmlns="http://www.w3.org/2000/svg" class="home-arrow">
     <g filter="url(#filter0_diiii_269_1233)">
     <rect x="30" width="424" height="70" rx="25" fill="#FFE768"/>
     <rect x="30" width="424" height="70" rx="25" fill="url(#paint0_linear_269_1233)"/>
