--- a/app/pug/blocks/footer.pug
+++ b/app/pug/blocks/footer.pug
@@ -59,3 +59,45 @@ footer
             .footer__bottom-item
                 a(href="#") Пользовательское соглашение
                 a(href="#") Политика конфиденциальности
+.white-popup_2(id="video-popup-2" class="mfp-hide")
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/X0jC2UWjoFs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+.white-popup_1(id="video-popup" class="mfp-hide")
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/X0jC2UWjoFs" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+.white-popup(id="text-popup" class="mfp-hide")
+    section.form 
+        h2.dop-title Написать нам
+        p Наш менеджер свяжется с вами в ближайшее время
+        form(action="#" method="post" id="form" class="form_box")
+            .inputs-left
+                .input_block
+                    input(type="text" name="name" id="name_input" class="rfield" required)
+                    span.error Это поле обязательное для заполнения 
+                    label.dop-input(for="name_input")
+                        span ФИО
+                .input_block
+                    input(type="text" name="phone" id="phone_input" class="rfield" required)
+                    span.error Это поле обязательное для заполнения
+                    label.dop-input(for="phone_input")
+                        span Номер
+                .input__wrapper
+                    input.input(name="file" type="file" id="input__file" class="input__file" multiple)
+                    label.input__file-button(for="input__file")
+                        span.input__file-icon-wrapper
+                            img.input__file-icon(src=img+"upload.svg", alt="Выбрать файл")
+                        span.input__file-button-text Выберите файл
+                button.btn(type="submit" id="button") Написать нам
+            .textarea_block
+                textarea(name="message" id="message_input") 
+                label(for="message_input")
+                    span Описание задачи
+svg(width="0" height="0" class="hidden")
+    <symbol width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" id="map">
+        <path d="M12 22C12 22 19.5 16 19.5 9.5C19.5 5.358 16.142 2 12 2C7.858 2 4.5 5.358 4.5 9.5C4.5 16 12 22 12 22Z" stroke="#607D8B" stroke-linejoin="round"/>
+        <path d="M12 12.5C12.394 12.5 12.7841 12.4224 13.1481 12.2716C13.512 12.1209 13.8427 11.8999 14.1213 11.6213C14.3999 11.3427 14.6209 11.012 14.7716 10.6481C14.9224 10.2841 15 9.89397 15 9.5C15 9.10603 14.9224 8.71593 14.7716 8.35195C14.6209 7.98797 14.3999 7.65726 14.1213 7.37868C13.8427 7.1001 13.512 6.87913 13.1481 6.72836C12.7841 6.5776 12.394 6.5 12 6.5C11.2044 6.5 10.4413 6.81607 9.87868 7.37868C9.31607 7.94129 9 8.70435 9 9.5C9 10.2956 9.31607 11.0587 9.87868 11.6213C10.4413 12.1839 11.2044 12.5 12 12.5V12.5Z" stroke="#607D8B" stroke-linejoin="round"/>
+    </symbol>
+    <symbol width="22" height="16" viewBox="0 0 22 16" fill="none" xmlns="http://www.w3.org/2000/svg" id="mail">
+        <path d="M1 15.5H21V0.5H1V15.5Z" stroke="#607D8B" stroke-linejoin="round"/>
+        <path d="M1 0.5L11 8L21 0.5" stroke="#607D8B" stroke-linecap="round" stroke-linejoin="round"/>
+        <path d="M11 0.5H1V8" stroke="#607D8B" stroke-linecap="round" stroke-linejoin="round"/>
+        <path d="M21 8V0.5H11" stroke="#607D8B" stroke-linecap="round" stroke-linejoin="round"/>
+    </symbol>
