--- a/app/sass/blocks/_menu.sass
+++ b/app/sass/blocks/_menu.sass
@@ -7,7 +7,7 @@
         left: 3.42rem
 .navigation-arrow
     position: absolute
-    z-index: 1
+    z-index: 2
     margin-left: 55px
     margin-top: 206px
     filter: drop-shadow(0px 50px 30px rgba(0, 0, 0, 0.05))
@@ -42,6 +42,26 @@
         position: absolute
         top: 62px
         left: -30px
+.navigation-arrow .clicked-menu
+    align-items: baseline
+    width: 145px
+    a
+        align-items: center
+        font-weight: bold
+        font-size: 14px
+        line-height: 110%
+        color: $dark-grey
+        svg
+            margin-right: 12px
+    .nav-arrow
+        margin-left: 140px
+        margin-top: 30px
+        svg
+            margin-right: 0px
+            transform: rotate(180deg)
+    a:hover
+        color: $primary
+        
 .hidden-menu
     display: none
 .active-menu
