--- a/app/pug/contact.pug
+++ b/app/pug/contact.pug
@@ -6,7 +6,7 @@ html
 		title
 	body
 		include blocks/header.pug
-		main.page-container
+		main.page-container(class="contact-page")
 			include blocks/navigation-home.pug
 			include blocks/arrow-contact.pug
 			section.contact 
