--- a/app/pug/text-page.pug
+++ b/app/pug/text-page.pug
@@ -6,7 +6,7 @@ html
 		title
 	body
 		include blocks/header.pug
-		main.page-container
+		main.page-container(class="text-page")
 			include blocks/navigation-home.pug
 			include blocks/arrow-text-page.pug
 			section.text-page 
@@ -28,75 +28,75 @@ html
 									td Марка стали
 							tbody 
 								tr 
-									td Труба ВГП (водогазопроводная) 15х2.35 уценка
-									td ТУ 14-157-09-98
-									td 6000,7800,10000
-									td 10.00
-									td 1.00
-									td Ст1-3
+									td(data-label="") Труба ВГП (водогазопроводная) 15х2.35 уценка
+									td(data-label="ГОСТ") ТУ 14-157-09-98
+									td(data-label="Длина") 6000,7800,10000
+									td(data-label="Диаметр") 10.00
+									td(data-label="Толщина") 1.00
+									td(data-label="Марка стали") Ст1-3
 								tr 
-									td Труба ВГП (водогазопроводная) 15х2.35 уценка
-									td ГОСТ 8733-74
-									td 7800
-									td 10.00
-									td 1.00
-									td Ст1-3
+									td(data-label="") Труба ВГП (водогазопроводная) 15х2.35 уценка
+									td(data-label="ГОСТ") ГОСТ 8733-74
+									td(data-label="Длина") 7800
+									td(data-label="Диаметр") 10.00
+									td(data-label="Толщина") 1.00
+									td(data-label="Марка стали") Ст1-3
 								tr 
-									td Труба ВГП (водогазопроводная) 15х2.35 уценка
-									td DIN EN 10217-7
-									td 8000-8250
-									td 10.00
-									td 2.50
-									td Ст1-3
+									td(data-label="") Труба ВГП (водогазопроводная) 15х2.35 уценка
+									td(data-label="ГОСТ") DIN EN 10217-7
+									td(data-label="Длина") 8000-8250
+									td(data-label="Диаметр") 10.00
+									td(data-label="Толщина") 2.50
+									td(data-label="Марка стали") Ст1-3
 								tr 
-									td Труба ВГП (водогазопроводная) 15х2.8 6м
-									td DIN EN 10217-7
-									td 6000
-									td 12.00
-									td 2.50
-									td Ст1-3
+									td(data-label="") Труба ВГП (водогазопроводная) 15х2.8 6м
+									td(data-label="ГОСТ") DIN EN 10217-7
+									td(data-label="Длина") 6000
+									td(data-label="Диаметр") 12.00
+									td(data-label="Толщина") 2.50
+									td(data-label="Марка стали") Ст1-3
 								tr 
-									td Труба ВГП (водогазопроводная) 15х2.8 7.8м
-									td DIN EN 10217-7
-									td 7800
-									td 12.00
-									td 2.80
-									td Ст1-3
+									td(data-label="") Труба ВГП (водогазопроводная) 15х2.8 7.8м
+									td(data-label="ГОСТ") DIN EN 10217-7
+									td(data-label="Длина") 7800
+									td(data-label="Диаметр") 12.00
+									td(data-label="Толщина") 2.80
+									td(data-label="Марка стали") Ст1-3
 								tr 
-									td Труба ВГП (водогазопроводная) 15х2.8 н/д
-									td DIN EN 10217-7
-									td немерная
-									td 14.00
-									td 2.80
-									td Ст1-3
+									td(data-label="") Труба ВГП (водогазопроводная) 15х2.8 н/д
+									td(data-label="ГОСТ") DIN EN 10217-7
+									td(data-label="Длина") немерная
+									td(data-label="Диаметр") 14.00
+									td(data-label="Толщина") 2.80
+									td(data-label="Марка стали") Ст1-3
 								tr 
-									td Труба ВГП (водогазопроводная) 15х3
-									td ГОСТ 8733-74
-									td 6000,7800,10000
-									td 14.00
-									td 2.80
-									td Ст1-3
+									td(data-label="") Труба ВГП (водогазопроводная) 15х3
+									td(data-label="ГОСТ") ГОСТ 8733-74
+									td(data-label="Длина") 6000,7800,10000
+									td(data-label="Диаметр") 14.00
+									td(data-label="Толщина") 2.80
+									td(data-label="Марка стали") Ст1-3
 								tr 
-									td Труба ВГП (водогазопроводная) 15х3.2 6.1м
-									td ГОСТ 8733-74
-									td 6100
-									td 16.00
-									td 3.00
-									td Ст1-3
+									td(data-label="") Труба ВГП (водогазопроводная) 15х3.2 6.1м
+									td(data-label="ГОСТ") ГОСТ 8733-74
+									td(data-label="Длина") 6100
+									td(data-label="Диаметр") 16.00
+									td(data-label="Толщина") 3.00
+									td(data-label="Марка стали") Ст1-3
 								tr 
-									td Труба ВГП (водогазопроводная) 15х3.2 6м
-									td ГОСТ 8733-74
-									td 6000
-									td 16.00
-									td 3.00
-									td Ст1-3
+									td(data-label="") Труба ВГП (водогазопроводная) 15х3.2 6м
+									td(data-label="ГОСТ") ГОСТ 8733-74
+									td(data-label="Длина") 6000
+									td(data-label="Диаметр") 16.00
+									td(data-label="Толщина") 3.00
+									td(data-label="Марка стали") Ст1-3
 								tr 
-									td Труба ВГП (водогазопроводная) 15х3.2 7.8м
-									td ГОСТ 8733-74
-									td 7800
-									td 18.00
-									td 3.00
-									td Ст1-3
+									td(data-label="") Труба ВГП (водогазопроводная) 15х3.2 7.8м
+									td(data-label="ГОСТ") ГОСТ 8733-74
+									td(data-label="Длина") 7800
+									td(data-label="Диаметр") 18.00
+									td(data-label="Толщина") 3.00
+									td(data-label="Марка стали") Ст1-3
 					.text-page__images 
 						img(src=img+"unsplash_shr_Xn8S8QU.png", alt="")
 						img(src=img+"unsplash_VHXiGXxwOQ4.png", alt="")
