--- a/app/pug/index.pug
+++ b/app/pug/index.pug
@@ -29,6 +29,9 @@ html
 							span 02
 							img(src=img+"slide.png", alt="")
 							h4 Сайты
+				.swiper-btn 
+					.swiper-button-prev
+					.swiper-button-next
 					
 			section.doing-reviews
 				.doing 
@@ -42,6 +45,7 @@ html
 						a(href="#") Все отзывы <svg width="24" height="25"><use xlink:href="#arrow"></use></svg>
 					.reviews__body
 						.reviews__body-item 
+							img.mobile(src=img+"unsplash_qfp4-Ud6Fyg-mobile.png", alt="")
 							img(src=img+"unsplash_qfp4-Ud6Fyg.png", alt="")
 							.reviews__text 
 								.reviews__date 26 янв 2018
@@ -55,6 +59,7 @@ html
 								a(href="#") Подробнее
 						.reviews__body-item
 							.reviews__body-video
+								img.mobile(src=img+"unsplash_qfp4-Ud6Fyg-mob.png", alt="")
 								img(src=img+"unsplash_qfp4-Ud6Fyg (1).png", alt="")
 								a(href="#video-popup" class="popup-content_1") <svg width="18" height="20" viewBox="0 0 18 20" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M0 0V20L18 10.0341L0 0Z" fill="white"/></svg>
 							.reviews__text 
